# hcb_donationbot

./: README.md  pyproject.toml
src/hcb_donationbot/: __init__.py  __main__.py
tests/: test_hcb_donationbot.py
